Add and update unit tests of the project